playwright-code-practice-05-09-2024-21:28_#0001IST

--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "main": "index.js",
   "scripts": {
     "pretest": "npx ts-node src/helper/report/init.ts",
-    "test": "cucumber-js --config=config/cucumber.js || true",
+    "test": "cucumber-js --tags @smokeTest --config=config/cucumber.js || true",
+    "report": "ts-node generate-html-report.ts",
     "posttest": "npx ts-node src/helper/report/report.ts",
-    "test:failed": "cucumber-js -p rerun @rerun.txt"
+    "test:failed": "cucumber-js -p rerun @rerun.txt",
+    "format": "prettier --write ."
   },
   "keywords": [
     "cucumber",
@@ -21,7 +23,11 @@
     "@playwright/test": "^1.45.3",
     "fs-extra": "^11.2.0",
     "multiple-cucumber-html-reporter": "^3.7.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "winston": "^3.13.1"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
