--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,7 @@
 {
-    "compilerOptions": {
-        "lib": [
-            "es2021"
-        ],
-        "typeRoots": [
-            "./node_modules/@types",
-            "src/helper/types"
-        ],
-        "resolveJsonModule": true
-    }
+  "compilerOptions": {
+    "lib": ["es2021"],
+    "typeRoots": ["./node_modules/@types", "src/helper/types"],
+    "resolveJsonModule": true
+  }
 }
